# CSD2

./: .gitignore  README.MD
CSD2a/eindopdracht/config/: project.json
CSD2a/eindopdracht/doc/: README.MD
CSD2a/eindopdracht/src/: euclidean.py  events.py  exporters.py  importers.py  main.py  playhead.py  sample_list.py  sequencer.py  unit_tests.py
CSD2a/eindopdracht/src/core/: clock.py  engine.py  euclidean.py  event.py  event_handlers.py  exporters.py  importers.py  sample.py  sequencer.py  session.py  session_editor.py  time_signature.py  utility.py
CSD2a/eindopdracht/src/core/events/: event.py  event_handlers.py  event_list.py
CSD2a/eindopdracht/src/core/legacy/: event_list.py  sample_list.py
CSD2a/eindopdracht/src/core/samples/: sample_list.py
CSD2a/eindopdracht/src/generators/: constraints.py  euclidean.py
CSD2a/eindopdracht/src/user_interface/: command_handlers.py  console_interface.py  transport_console_interface.py
CSD2a/event_based_sequencer/config/: settings.json
CSD2a/event_based_sequencer/doc/: README.MD
CSD2a/event_based_sequencer/src/: clock.py  main.py  time_signature.py  unit_tests.py
CSD2a/multi_sample_sequencer/config/: settings.json
CSD2a/multi_sample_sequencer/doc/: README.MD
CSD2a/multi_sample_sequencer/src/: clock.py  console_interface.py  events.py  main.py  sample_list.py  sequencer.py  time_signature.py  transport.py  unit_tests.py
CSD2a/python_basics/doc/: README.MD
CSD2a/python_basics/src/: hello_world.py  playsound.py
CSD2a/rhythmic_playback/doc/: README.MD
CSD2a/rhythmic_playback/src/: InputProvider.py  RhythmicPlaybackEngine.py  SamplePlayer.py  Sequencer.py  input_provider.py  main.py  playback_engine.py  sequencer.py
CSD2a/single_sample_sequencer/doc/: README.MD
CSD2a/single_sample_sequencer/src/: audio_transport.py  console_interface.py  events.py  main.py  play_head.py  time_signature.py  transport.py  unit_tests.py
CSD2b/console_synth/: .clang-format  .gitignore  CMakeLists.txt
CSD2b/console_synth/apps/: CMakeLists.txt  main.cpp
CSD2b/console_synth/documentation/: README.MD  fm_synth_audio_flow_diagram.drawio  fm_theory.md  rm_synth_audio_flow_diagram.drawio  synthesizer_uml_diagram.drawio  uml_diagram.drawio
CSD2b/console_synth/documentation/diagram_sources/: console_interface_uml_diagram.drawio  engine_uml_diagram.drawio
CSD2b/console_synth/include/console_synth/: engine.h  identifiers.h  property.h  utility.h
CSD2b/console_synth/include/console_synth/audio/: audio_callback.h  audio_engine.h  audio_processor_base.h  envelope.h  oscillator.h  oscillators.h  processor_chain.h  reverb.h  saw_synthesizer.h  sine_synthesizer.h  synth_types.h  synthesizer.h  synthesizers.h
CSD2b/console_synth/include/console_synth/console_interface/: console_interface.h
CSD2b/console_synth/include/console_synth/midi/: midi_callback.h  midi_message_queue.h  midi_source.h
CSD2b/console_synth/include/console_synth/sequencer/: clock.h  event.h  melody.h  melody_generator.h  play_head.h  play_state.h  playhead.h  render_context.h  sequencer.h  time_signature.h  track.h  transport_control.h
CSD2b/console_synth/include/console_synth/utility/: drow_ValueTreeObjectList.h  format.h  property.h  scoped_message_thread_enabler.h
CSD2b/console_synth/source/: CMakeLists.txt  console_interface.h  engine.cpp  format.h  main.cpp  utility.cpp
CSD2b/console_synth/source/audio/: CMakeLists.txt  audio_callback.cpp  audio_callback.h  audio_engine.cpp  audio_engine.h  noise_generator.cpp  noise_generator.h  reverb.h  sine_generator.h  sine_synthesizer.h
CSD2b/console_synth/source/console_interface/: console_interface.cpp
CSD2b/console_synth/source/midi/: CMakeLists.txt  midi_callback.h
CSD2b/console_synth/source/sequencer/: play_head.cpp  playhead.cpp  sequencer.cpp  time_signature.cpp  track.cpp
CSD2b/console_synth/source/utility/: scoped_message_thread_enabler.cpp
CSD2b/console_synth/tests/: CMakeLists.txt  adsr_test.cpp  cli_test.cpp  melody_generator_test.cpp  midi_output_device_creation_test.cpp  midi_queue_test.cpp  oscillator_test.cpp  play_head_test.cpp  playhead_test.cpp  sequencer_test.cpp  time_signature_test.cpp  value_tree_test.cpp
CSD2b/console_synth/tests/data/: data_plotter.py  fm_dual_sine_render.csv  fm_quad_sine_render.csv  square_osc_anti_aliased.csv  square_osc_naive.csv  square_templated_aa.csv
CSD2b/hello_world/: CMakeLists.txt  Makefile
CSD2b/hello_world/documentation/: README.MD
CSD2b/hello_world/source/: Makefile  main.cpp
